Homework9/v1.0.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1
spec:
  selector:
    matchLabels:
      app: app-v1
  template:
    metadata:
      labels:
        app: app-v1
    spec:
      containers:
        - name: kiii-nginx-1
          image: stefantagarski/kiii-ngnix:1.0
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: app-v1
spec:
  selector:
    app: app-v1
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
