Homework9/v2.0.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v2
spec:
  selector:
    matchLabels:
      app: app-v2
  template:
    metadata:
      labels:
        app: app-v2
    spec:
      containers:
        - name: kiii-nginx-2
          image: stefantagarski/kiii-ngnix:2.0
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: app-v2
spec:
  selector:
    app: app-v2
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
